Add Category migration and model , Update Products Things
