# app/Http/Resources/Product/ProductResource.php
@@ -21,6 +21,7 @@ class ProductResource extends JsonResource
             'image' => $imageUrl,
             'description' => $this->description,
             'price' => $this->price,
+            'category'=>$this->category->name,
         ];
         if ($request->routeIs('products.index')) {
             unset($data['description']);
