# app/Models/Category/Category.php
@@ -1,0 +1,19 @@
+<?php
+
+namespace App\Models\Category;
+
+use App\Models\Product\Product;
+use Illuminate\Database\Eloquent\Factories\HasFactory;
+use Illuminate\Database\Eloquent\Model;
+
+class Category extends Model
+{
+    use HasFactory;
+
+    protected $guarded = [];
+
+    public function products()
+    {
+        return $this->hasMany(Product::class);
+    }
+}
