# app/Models/Product/Product.php
@@ -2,6 +2,7 @@
 
 namespace App\Models\Product;
 
+use App\Models\Category\Category;
 use Illuminate\Database\Eloquent\Factories\HasFactory;
 use Illuminate\Database\Eloquent\Model;
 
@@ -10,6 +11,11 @@ class Product extends Model
     use HasFactory;
 
     protected $guarded = [];
+
+    public function category()
+    {
+        return $this->belongsTo(Category::class);
+    }
 
     public static function getAllProducts($items, $column, $direction)
     {
